                    -------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
	 
06-10-14 mma (exhadr03-V10-00-06)
- PhysicsList : add G4IonElasticPhysics constructor
	 
18-09-14 mma (exhadr03-V10-00-05)
- Hadr03.cc : SetNumberOfThreads(G4Threading::G4GetNumberOfCores())
- Fixed test in envHadronic.sh
     
07-04-14 mma (exhadr03-V10-00-04)
- Register RunMessenger in RunAction instead of Run
	 
05-04-14 mma (exhadr03-V10-00-03)
- Histograms: change numbering scheme. Add histo of atomic mass
- EndOfRun: introduce optional print and UI command to control it
- refresh nFission.mac
     
25-03-14 mma (exhadr03-V10-00-02)
- Cosmetic when printing EndOfRun
      
26-02-14 mma (exhadr03-V10-00-01)
- PhysicsList: use G4HadronElasticPhysicsHP 
     
14-12-13 mma (exhadr03-V10-00-00)
- DetectorConstruction: remove magfield
- MT: add ActionInitialization. Modify Hadr03.cc
- MT: add Run. Modify RunAction, SteppingAction
- remove EventAction and its messenger
- define a stucture for nuclear channel data
- put a flag for target name="XXXX"

02-12-13  I.Hrivnacova (exhadr03-V09-06-23)
- Updated .README for changes in README

22-11-13  A.Dotti      (exhadr03-V09-06-22)
- Use G4RunManager::ReinitializeGeometry() to trigger geo
 rebuild. Remove UI command to update geometry.

29-07-13  P.Gumplinger (exhadr03-V09-06-21)
- fix MAC/clang32 compilation warnings

11-07-13 I.Hrivnacova (exhadr03-V09-06-20) 
- In HistoManager: use new analysis manager method SetH1Activation()   

19-06-13 mma (exhadr03-V09-06-19)
- SteppingVerbose: use G4Step::GetSecondaryInCurrentStep()
     
14-06-13 mma (exhadr03-V09-06-18)
- SteppingAction: use G4Step::GetSecondaryInCurrentStep()
