@@ -36,11 +36,11 @@
 #include "G4UnitsTable.hh"
 
 #include "G4HadronElasticPhysicsHP.hh"
-#include "G4IonElasticPhysics.hh"
 #include "G4HadronPhysicsFTFP_BERT_HP.hh"
 #include "G4HadronPhysicsQGSP_BIC_HP.hh"
 #include "G4HadronInelasticQBBC.hh"
 #include "G4HadronPhysicsINCLXX.hh"
+#include "G4IonElasticPhysics.hh"
 #include "G4IonPhysics.hh"
 #include "G4IonINCLXXPhysics.hh"
 #include "GammaPhysics.hh"
@@ -69,20 +69,27 @@ PhysicsList::PhysicsList()
   new G4UnitDefinition( "um2/mg", "um2/mg","Surface/Mass", um*um/mg);  
   
   // Hadron Elastic scattering
-  RegisterPhysics( new G4HadronElasticPhysicsHP(verb) );
-  RegisterPhysics( new G4IonElasticPhysics(verb) );  
+  //
+  RegisterPhysics( new G4HadronElasticPhysicsHP(verb));
 
-  // Hadron Inelastic Physics
+  // Hadron Inelastic physics
+  //
   RegisterPhysics( new G4HadronPhysicsFTFP_BERT_HP(verb));
   ////RegisterPhysics( new G4HadronPhysicsQGSP_BIC_HP(verb));
   ////RegisterPhysics( new G4HadronInelasticQBBC(verb));        
   ////RegisterPhysics( new G4HadronPhysicsINCLXX(verb));
   
-  // Ion Physics
+  // Ion Elastic scattering
+  //
+  RegisterPhysics( new G4IonElasticPhysics(verb));  
+  
+  // Ion Inelastic physics
+  //
   RegisterPhysics( new G4IonPhysics(verb));
   ////RegisterPhysics( new G4IonINCLXXPhysics(verb));
     
-  // Gamma Physics
+  // Gamma physics
+  //
   RegisterPhysics( new GammaPhysics("gamma"));
 }
 
